# example-robot-framework

./: .gitignore  README.md
tests/: pyproject.toml
tests/tests/: __init__.robot  bdd.resource  keywords.resource  repo_files.robot  stuff.robot  user_journeys.robot  user_journies.robot
